curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
spec:
  containers:
    - name: curl
      image: curlimages/curl:latest
      command: ["sleep", "3600"]
  restartPolicy: Never
