emissary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emissary-ingress
  namespace: emissary
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: http3
      port: 443
      targetPort: 8443
      protocol: UDP
